@@ -24,6 +24,7 @@ Bugs fixed:
 - 2158091 sfcb modules belong in private dir
 - 2193250 No data in http request causes segfault.
 - 2185304 SFCB doesn't shut down properly a good portion of the time. 
+- 2192049 Potential memory leak in providerDrv.c:forkProvider()
 
 Changes in 1.3.2
 ================
